Organizando as rotas da documentação em tags
