# functions/src/controllers/companies.controller.ts
@@ -4,10 +4,12 @@ import { CompanyService } from "../services/company.service.js";
 
 export class CompaniesController {
     static async getAll(req: Request, res: Response) {
+        // #swagger.tags = ['Companies']
         res.send(await new CompanyService().getAll()); //Essa função do Express automaticamente converte o objeto JavaScript users em uma string JSON e a envia como resposta.
     };
 
     static async save(req: Request, res: Response) {
+        // #swagger.tags = ['Companies']
         await new CompanyService().save(req.body); 
         res.status(201).send({
             message: `Empresa cadastrada com sucesso.`
@@ -15,11 +17,13 @@ export class CompaniesController {
     };
 
     static async getById(req: Request, res: Response) {
+        // #swagger.tags = ['Companies']
         const companyId = req.params.id; //pega o e armazena o ID do usuário
         res.send(await new CompanyService().getById(companyId));
     };
 
     static async update(req: Request, res: Response) {
+        // #swagger.tags = ['Companies']
         const companyId = req.params.id;
         const company = req.body as Company;
         await new CompanyService().update(companyId, company);
