# functions/src/controllers/payment-methods.controller.ts
@@ -5,15 +5,18 @@ import { PaymentMethod } from "../models/payment-method.model.js";
 export class PaymentMethodsController {
 
     static async getAll(req: Request, res: Response) {
+        // #swagger.tags = ['PaymentMethods']
         res.send(await new PaymentMethodService().getAll());
     }
 
     static async getById(req: Request, res: Response) {
+        // #swagger.tags = ['PaymentMethods']
         const paymentMethodId = req.params.id;
         res.send(await new PaymentMethodService().getById(paymentMethodId));
     }
 
     static async save(req: Request, res: Response) {
+        // #swagger.tags = ['PaymentMethods']
         await new PaymentMethodService().save(req.body);
         res.status(201).send({
             message: `Forma de Pagamento criada com sucesso!`
@@ -21,6 +24,7 @@ export class PaymentMethodsController {
     }
 
     static async update(req: Request, res: Response) {
+        // #swagger.tags = ['PaymentMethods']
         const paymentMethodId = req.params.id;
         const paymentMethod = req.body as PaymentMethod;
         await new PaymentMethodService().update(paymentMethodId, paymentMethod);
@@ -30,6 +34,7 @@ export class PaymentMethodsController {
     }
 
     static async delete(req: Request, res: Response) {
+        // #swagger.tags = ['PaymentMethods']
         const paymentMethodId = req.params.id;
         await new PaymentMethodService().delete(paymentMethodId);
         res.status(204).end();
