# functions/src/controllers/product.controller.ts
@@ -5,20 +5,24 @@ import { ProductService } from "../services/product.service.js";
 export class ProductsController {
 
     static async getAll(req: Request, res: Response) {
+        // #swagger.tags = ['Products']
         res.send(await new ProductService().getAll());
     }
 
     static async search(req: Request, res: Response) {
+        // #swagger.tags = ['Products']
         const categoriaId = req.query.categoriaId as string; // Pega a query com o ID e converte ela para um string com o AS.
         res.send(await new ProductService().search(categoriaId));
     }
 
     static async getById(req: Request, res: Response) {
+        // #swagger.tags = ['Products']
         const productId = req.params.id;
         res.send(await new ProductService().getById(productId));
     }
 
     static async save(req: Request, res: Response) {
+        // #swagger.tags = ['Products']
         await new ProductService().save(req.body);
         res.status(201).send({
             message: `Produto criado com sucesso!`
@@ -26,6 +30,7 @@ export class ProductsController {
     }
 
     static async update(req: Request, res: Response) {
+        // #swagger.tags = ['Products']
         const productId = req.params.id;
         const product = req.body as Product;
         await new ProductService().update(productId, product);
@@ -35,6 +40,7 @@ export class ProductsController {
     }
     
     static async delete(req: Request, res: Response) {
+        // #swagger.tags = ['Products']
         const productId = req.params.id;
         await new ProductService().delete(productId);
         res.status(204).end();
